added fixes and improving the tests